Added the sorting functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="/icon.png" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
+      href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap"
       rel="stylesheet"
     />
 
@@ -45,6 +45,7 @@
             As of <span class="date">05/03/2037</span>
           </p>
         </div>
+        <button class="btn save-session">Save Session</button>
         <p class="balance__value">0000€</p>
       </div>
 
